# STCMap

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
assets/meshes/: Kettle.fbx
common/: Camera.cpp  Camera.h  CommonGlobal.h  GameTimer.cpp  GameTimer.h  GeometryGenerator.h  SharedGlobal.h
common/utils/: DDSTextureLoader.cpp  GeometryGenerator.cpp  GeometryGenerator.h  MathHelper.cpp  MathHelper.h  UploadBuffer.h  d3dUtil.cpp  d3dUtil.h
common/window/: BaseWindow.cpp  BaseWindow.h  d3dApp.cpp  d3dApp.h
scripts/: build.py  functions.cmake
shaders/: atmosphere_cs.hlsl  blit_ps.hlsl  flat_unlit_vs.hlsl  fullscreen_triangle_vs.hlsl  model_ps.hlsl  model_vs.hlsl  outline_ps.hlsl  outline_vs.hlsl  present_ps.hlsl  sky_procedural_ps.hlsl  sky_rs.hlsl  sky_texture_ps.hlsl
shaders/common/: brdf.hlsli  camera.hlsli  common.hlsli  cs.hlsli  light_source.hlsli  lighting.hlsli  material.hlsli  math.hlsli  model_rs.hlsli  normal.hlsli  present_rs.hlsli  random.hlsli  raytracing.hlsli  transform.hlsli
shaders/geometry/: default_pbr_ps.hlsl  default_pbr_transparent_ps.hlsl  default_vs.hlsl  depth_only_animated_vs.hlsl  depth_only_ps.hlsl  depth_only_vs.hlsl  shadow_point_light_ps.hlsl  shadow_point_light_vs.hlsl  shadow_vs.hlsl
shaders/light_culling/: light_culling_cs.hlsl  world_space_tiled_frustum_cs.hlsl
shaders/mesh_shaders/: mesh_shader_ps.hlsl  mesh_shader_v0_ms.hlsl  mesh_shader_v1_ms.hlsl  mesh_shader_v2_ms.hlsl  mesh_shader_v4_as.hlsl  mesh_shader_v4_common.hlsli  mesh_shader_v4_ms.hlsl  mesh_shader_v4_ps.hlsl
shaders/outline/: outline_ps.hlsl  outline_vs.hlsl
shaders/post_processing/: blit_cs.hlsl  bloom_combine_cs.hlsl  bloom_threshold_cs.hlsl  gaussian_blur_5x5_cs.hlsl  gaussian_blur_9x9_cs.hlsl  gaussian_blur_common.hlsli  hierarchical_linear_depth_cs.hlsl  present_cs.hlsl  present_ps.hlsl  specular_ambient_cs.hlsl  taa_cs.hlsl  tonemap_cs.hlsl
shaders/raytracing/: path_tracing_rts.hlsl  specular_reflections_rts.hlsl
shaders/reflections/: ssr_median_blur_cs.hlsl  ssr_raycast_cs.hlsl  ssr_resolve_cs.hlsl  ssr_temporal_cs.hlsl
shaders/rs/: default_pbr_rs.hlsli  depth_only_rs.hlsli  flat_simple_rs.hlsli  light_culling.hlsli  light_culling_rs.hlsli  model_rs.hlsli  outline_rs.hlsli  post_processing_rs.hlsli  present_rs.hlsli  skinning_rs.hlsli  sky_rs.hlsli  ssr_rs.hlsli  volumetrics_rs.hlsli
shaders/skinning/: skinning_cs.hlsl
shaders/sky/: sky_procedural_ps.hlsl  sky_texture_ps.hlsl  sky_vs.hlsl
shaders/texture_preprocessing/: cubemap_to_irradiance_cs.hlsl  equirectangular_to_cubemap_cs.hlsl  generate_mips_cs.hlsl  integrate_brdf_cs.hlsl  prefilter_environment_cs.hlsl
shaders/visualization/: flat_simple_ps.hlsl  flat_simple_vs.hlsl  flat_unlit_vs.hlsl
shaders/water/: water_vs.hlsl
shared/: Camera.cpp  DDSTextureLoader.cpp  DDSTextureLoader.h  GameTimer.cpp  GameTimer.h  GeometryGenerator.cpp  MathHelper.cpp  MathHelper.h  UploadBuffer.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  d3dx12.h
src/: Application.cpp  Application.h  BaseWidnow.cpp  BaseWindow.h  DirectWindow.cpp  DirectWindow.h  GameTimer.cpp  GameTimer.h  input.h  main.cpp  pch.h
src/Windows/: BaseWindow.cpp  BaseWindow.h  BoxApp.cpp  BoxApp.h  BoxWindow.cpp  BoxWindow.h  InitAppWindow.cpp  InitAppWindow.h  ShapesWindow.cpp  ShapesWindow.h  Window.cpp  Window.h
src/animation/: animation.cpp  animation.h  skinning.cpp  skinning.h
src/core/: camera.cpp  camera.h  cameraController.cpp  cameraController.h  color.h  input.h  math.cpp  math.h  memory.cpp  memory.h  perlin.cpp  perlin.h  random.h  simd.h  threading.cpp  threading.h
src/directx/: BarrierBatcher.cpp  BarrierBatcher.h  DxBarrierBatcher.cpp  DxBarrierBatcher.h  DxBuffer.cpp  DxBuffer.h  DxCommandList.cpp  DxCommandList.h  DxCommandQueue.cpp  DxCommandQueue.h  DxContext.cpp  DxContext.h  DxDescriptor.cpp  DxDescriptor.h  DxDescriptorAllocation.cpp  DxDescriptorAllocation.h  DxDescriptorHeap.cpp  DxDescriptorHeap.h  DxDynamicDescriptorHeap.cpp  DxDynamicDescriptorHeap.h  DxPipeline.cpp  DxPipeline.h  DxProfiling.cpp  DxProfiling.h  DxQuery.cpp  DxQuery.h  DxRenderPrimitives.cpp  DxRenderPrimitives.h  DxRenderTarget.cpp  DxRenderTarget.h  DxRenderer.cpp  DxRenderer.h  DxTexture.cpp  DxTexture.h  DxUploadBuffer.cpp  DxUploadBuffer.h  dx.h
src/physics/: assimp.cpp  assimp.h  bounding_volumes.cpp  bounding_volumes.h  colliders.cpp  colliders.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h
src/render/: LightSource.cpp  LightSource.h  MeshShader.cpp  MeshShader.h  PathTracing.cpp  PathTracing.h  Raytracer.cpp  Raytracer.h  Raytracing.cpp  Raytracing.h  RaytracingBindingTable.h  RaytracingSpecular.cpp  RaytracingSpecular.h  RaytracingTlas.cpp  RaytracingTlas.h  RenderPass.cpp  RenderPass.h  Scene.h  ShadowMapCache.cpp  ShadowMapCache.h  TexturePreprocessing.cpp  TexturePreprocessing.h  TrasformationGizmo.cpp  TrasformationGizmo.h  material.h  pbr.cpp  pbr.hpp
src/shaders/: color.hlsl
src/utility/: FameResource.cpp  FrameResource.h
