cmake_minimum_required(VERSION 3.26)
project(STCMapEngine)

set(CMAKE_CXX_STANDARD 20)
set(PROJECT_NAME STCMapEngine)
if(NOT MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wno-narrowing -Wno-sign-compare -Wno-unused-variable")
endif ()
message(${CMAKE_CXX_FLAGS})
include(scripts/functions.cmake)

set(src_files "")
set(local_libs_dir "")
set(src_dirs "")
set(inc_dirs "")

scan_dirs(${CMAKE_CURRENT_SOURCE_DIR}/src src_dirs)
foreach (dir_name ${src_dirs})
    set(is_library false)
    have_cmake(${CMAKE_CURRENT_SOURCE_DIR}/src/${dir_name} is_library)
    if(${is_library})
        list(APPEND local_libs_dir ${dir_name})
    endif ()
endforeach ()
foreach (dir_name ${local_libs_dir})
    list(REMOVE_ITEM src_dirs ${dir_name})
endforeach ()

scan(src_files ${CMAKE_CURRENT_SOURCE_DIR}/src .cpp)
scan(headers ${CMAKE_CURRENT_SOURCE_DIR}/src .h)
foreach (dir_name ${src_dirs})
    set(dir_src "")
    set(dir_header "")
    scan(dir_src ${CMAKE_CURRENT_SOURCE_DIR}/src/${dir_name} .cpp)
    foreach (item ${dir_src})
        list(APPEND src_files ${item})
    endforeach ()
    scan(dir_header ${CMAKE_CURRENT_SOURCE_DIR}/src/${dir_name} .h)
    foreach (item ${dir_src})
        list(APPEND headers ${item})
    endforeach ()
endforeach ()

if(WIN32)
    add_link_options(
            /SUBSYSTEM:WINDOWS
            /DYNAMICBASE
            Version.lib
            Comctl32.lib
            /MACHINE:X64
    )
    add_executable(${PROJECT_NAME} ${src_files})
    if(MSVC)
        target_compile_options(${PROJECT_NAME} INTERFACE /arch:SSE4.1)
    else ()
        target_compile_options(${PROJECT_NAME} INTERFACE -msse4.1)
    endif ()
    set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE TRUE)
else ()
    add_executable(${PROJECT_NAME} ${src_files})
endif ()

set(shared_sources)
set(shared_headers)
scan(shared_sources ${PROJECT_SOURCE_DIR}/shared .cpp)
scan(shared_headers ${PROJECT_SOURCE_DIR}/shared .h)
add_library(shared STATIC ${shared_sources} ${shared_headers})
target_link_libraries(shared PUBLIC dxgi.lib d3d12.lib dxguid.lib d3dcompiler.lib)

if(EXISTS ${PROJECT_SOURCE_DIR}/resources)
    file(GLOB dir RELATIVE ${PROJECT_SOURCE_DIR}/resources ${PROJECT_SOURCE_DIR}/resources/*)
    foreach (file ${dir})
        file(COPY_FILE ${PROJECT_SOURCE_DIR}/resources/${file} ${CMAKE_CURRENT_BINARY_DIR}/${file})
    endforeach ()
endif ()
target_include_directories(${PROJECT_NAME} PUBLIC shared PRIVATE shobjidl.lib d2d1.lib)

foreach (subdir ${local_libs_dir})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/${subdir})
endforeach ()
enable_testing()